<resources>
    <string name="app_name">Simple Gallery</string>
    <string name="app_launcher_name">Gallery</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open_with">Open with</string>
    <string name="open_camera">Open camera</string>
    <string name="system_service_disabled">System service for selecting files and folders is unavailable</string>
    <string name="custom">Custom</string>
    <string name="hidden">(hidden)</string>
    <string name="cannot_rename_folder">Cannot rename this folder</string>
    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
    <string name="excluded">(excluded)</string>
    <string name="no_sound">No sound</string>
    <string name="no_app_found">No valid app found</string>
    <string name="share_via">Share via</string>
    <string name="set_as">Set as</string>
    <string name="maximum_share_reached">You cannot share this much content at once</string>
    <string name="edit_with">Edit with</string>
    <string name="thank_you_url">https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou</string>
    <string name="pin_folder">Pin folder</string>
    <string name="alarm">Alarm</string>
    <string name="unpin_folder">Unpin folder</string>
    <string name="confirm_storage_access_android_text">Please allow the app accessing the selected storage on the next screen by pressing \'Use this folder\' at the bottom.</string>
    <string name="pin_to_the_top">Pin to the top</string>
    <string name="error">Error: %s</string>
    <string name="show_all">Show all folders content</string>
    <string name="unknown">Unknown</string>
    <string name="yes">Yes</string>
    <string name="all_folders">All folders</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="folder_view">Switch to folder view</string>
    <string name="other_folder">Other folder</string>
    <string name="show_on_map">Show on map</string>
    <string name="unknown_location">Unknown location</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="authenticate">Authenticate</string>
    <string name="lock_orientation">Lock orientation</string>
    <string name="unlock_orientation">Unlock orientation</string>
    <string name="wrong_folder_selected">Wrong folder selected, please select path \'%s\'</string>
    <string name="sd_card_usb_same">SD card and USB device paths cannot be the same</string>
    <string name="wrong_root_selected_usb">Wrong folder selected, please select the main folder of your USB device</string>
    <string name="wrong_root_selected">Wrong folder selected, please select the main folder of your SD card</string>
    <string name="source_and_destination_same">Source and destination cannot be the same</string>
    <string name="invalid_destination">Could not write to the selected destination</string>
    <string name="moving">Moving…</string>
    <string name="copying">Copying…</string>
    <string name="allow_notifications_files">You must allow the app displaying notifications, else it cannot show the progress bar.</string>
    <string name="no_space">The destination does not have enough space available.\nRequired %1$s, available %2$s</string>
    <string name="copying_success">Files copied successfully</string>
    <string name="copying_success_one">File copied successfully</string>
    <string name="copying_success_partial">Some files could not be copied</string>
    <string name="moving_success_one">File moved successfully</string>
    <string name="moving_success_partial">Some files could not be moved</string>
    <string name="moving_success">Files moved successfully</string>
    <string name="copy_move_failed">An error occurred</string>
    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
        It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
    <string name="settings_exported_successfully">Settings exported successfully</string>
    <string name="pro">Pro</string>
    <string name="version_placeholder">Version %s</string>
    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
    <string name="make_sure_latest">Also make sure that you are using the latest app version.</string>
    <string name="read_faq">Read FAQ</string>
    <string name="skip">Skip</string>
    <string name="app_version">App version: %s</string>
    <string name="device_os">Device OS: %s</string>
    <string name="my_email">hello@simplemobiletools.com</string>
    <string name="my_fake_email">noreply@simplemobiletools.com</string>
    <string name="send_email">Send email</string>
    <string name="no_email_client_found">No email client found</string>
    <string name="share_text">Hey, come check out %1$s at %2$s</string>
    <string name="invite_via">Invite via</string>
    <string name="donate_url">https://www.simplemobiletools.com/donate#paypal</string>
    <string name="hello">Hello :)</string>
    <string name="folder_already_exists">Folder \"%s\" already exists</string>
    <string name="file_already_exists">File \"%s\" already exists</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="merge">Merge</string>
    <string name="overwrite">Overwrite</string>
    <string name="keep_both">Keep both</string>
    <string name="faq_5_title_commons">Can I somehow restore deleted files?</string>
    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, there is a Recycle Bin enabled by default, it will cause the files just be moved in the Bin instead of deleting them.</string>
    <string name="faq_9_title_commons">How can I select multiple items at once?</string>
    <string name="faq_9_text_commons">There are multiple ways of doing that. The first one is starting the selection mode by long pressing one item, then short clicking on others to select them. The second way is similar to selecting items on PCs with a mouse,
        just start the selection mode by long pressing one item, then with your finger still down drag it across other items for selecting. The third way of selecting multiple items is long pressing one item, then long pressing another one and everything in between gets selected. If you
        want to select all items, just long press one item, then click at the selected item counter at the top left corner. That will select or unselect all everything.</string>
    <string name="faq_2_title_commons">I want to support you, but I cannot donate money. Is there anything else I can do?</string>
    <string name="faq_2_text_commons">
        <![CDATA[
            Yes, of course. You can spread the word about the apps or give good feedback and ratings. You can also help by translating the apps in a new language, or just update some existing translations.
            The guide to translating is at <a href="https://github.com/SimpleMobileTools/General-Discussion#how-can-i-suggest-an-edit-to-a-file">this website</a>, or just contact us at <a href="mailto:hello@simplemobiletools.com">hello@simplemobiletools.com</a> if you have any questions.
        ]]>
    </string>
    <string name="faq_6_title_commons">The app launcher icon disappeared. What can I do?</string>
    <string name="faq_6_text_commons">It is caused by your launcher not supporting icon customization properly. Try launching the app via Google Play or some widget, if available.
        Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
    <string name="faq_7_title_commons">The money has been deducted from my bank account, but I cannot download the app. What can I do?</string>
    <string name="faq_7_text_commons">Payments are fully handled by Google, their system glitches from time to time. Just clear your Google Play app cache and restart your device, then retry downloading it.</string>
    <string name="faq_10_title_commons">I have purchased the app, but I cannot download it on another device.</string>
    <string name="faq_10_text_commons">Try clearing your Google Play app cache and restarting your device. It is some Google Play glitch, not really related to the app itself.</string>
    <string name="access_storage_prompt">Please grant our app access to all your files, it might not work well without it.</string>
    <string name="whats_new">What\'s new</string>
    <string name="whats_new_disclaimer">* only the bigger updates are listed here, there are always some smaller improvements too</string>
    <string name="temporarily_show_excluded">Temporarily show excluded</string>
    <string name="temporarily_show_hidden">Temporarily show hidden</string>
    <string name="add_blocked_number_helper_text">Enter a number or a pattern (e.g. *12345*, +1*8888) to block all calls and messages from numbers matching the pattern.</string>
    <string name="number">Number</string>
    <string name="favorites">Favorites</string>
    <string name="select_file">Select a file</string>
    <string name="select_folder">Select a folder</string>
    <string name="system_folder_restriction">The system does not allow the operation in this folder, please pick another one</string>
    <string name="please_select_destination">Please select a destination</string>
    <string name="record_video">Record video</string>
    <string name="record_audio">Record audio</string>
    <string name="choose_contact">Choose contact</string>
    <string name="no">No</string>
    <string name="search_files">Search files</string>
    <string name="search_folders">Search folders</string>
    <string name="deleting_folder">Deleting folder \'%s\'</string>
    <string name="internal">Internal</string>
    <string name="sd_card">SD Card</string>
    <string name="usb">USB</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="none">None</string>
    <string name="saving">Saving…</string>
    <string name="out_of_memory_error">Out of memory error</string>
    <string name="save_as">Save as</string>
    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
    <string name="filename_invalid_characters">Filename contains invalid characters</string>
    <string name="file_already_exists_overwrite">File \"%s\" already exists. Overwrite?</string>
    <string name="upgraded_from_free_gallery">Hello,\n\nseems like you just upgraded from the free version. Once you are happy with this one and maybe migrated your settings and favorites over, you can uninstall the old free one to avoid launching it accidentally as you will not need it anymore, it will also prevent this dialog from showing up.\n\nThanks!</string>
    <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="properties">Properties</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="resize">Resize</string>
    <string name="change_orientation">Change orientation</string>
    <string name="rotate">Rotate</string>
    <string name="slideshow">Slideshow</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="toggle_file_visibility">Toggle file visibility</string>
</resources>