<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manage_bottom_actions_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/manage_bottom_actions_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/medium_margin"
        android:paddingRight="@dimen/activity_margin">

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_toggle_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/toggle_favorite"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/edit"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/share"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/delete"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_rotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/rotate"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/properties"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_change_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/change_orientation"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_slideshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/slideshow"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_show_on_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/show_on_map"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_toggle_visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/toggle_file_visibility"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/rename"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_set_as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/set_as"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/copy"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/move"/>

        <ca.hojat.smart.gallery.shared.ui.views.MyAppCompatCheckbox
            android:id="@+id/manage_bottom_actions_resize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/resize"/>

    </LinearLayout>
</ScrollView>
